--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.7",
     "flutterwave-react-v3": "^1.3.0",
+    "framer-motion": "^11.2.0",
     "grommet-icons": "^4.12.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
