--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.0",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
