--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.22.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
+    "react-webcam": "^7.2.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
